# rpg-cpp

./: .gitignore  CMakeLists.txt  ITEM_NAMES.md  README.md  character_classes.cpp  game.cpp  item_classes.cpp  item_names  main.cpp  utils.cpp
.cache/clangd/index/: abilities.cpp.C61FF00F77E1FECC.idx  character_classes.cpp.86E6A70E99A02C5C.idx  character_classes.hpp.1238C4C69815ABB7.idx  game.cpp.9B7CADC034514BB7.idx  item_classes.cpp.3CDF5EB1FC29874D.idx  item_classes.hpp.1D3884063F35A788.idx  main.cpp.CA8FB983A09DBAD4.idx  utils.cpp.FEE0504E76834670.idx  utils.hpp.DBE15CC55FA59E14.idx
include/: abilities.hpp  character_classes.hpp  game.hpp  item_classes.hpp  utils.hpp
res/: items.json
src/: abilities.cpp  character_classes.cpp  game.cpp  item_classes.cpp  main.cpp  utils.cpp
